<resources>
    <string name="app_name">ProyectoEasyFood</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="numero_dni">Numero de Dni</string>
    <string name="contrasena">Contraseña</string>
    <string name="datos_vacios">DATOS VACIOS</string>
    <string name="datos_incorrecto">DATOS INCORRECTOS</string>
    <string name="contraseña_incorrecta">CONTRASEÑA INCORRECTA</string>
    <string name="datos_correctos">Bienvenido a EASYFOOD</string>
    <string name="usuario_incorrecto">USUARIO INCORRECTO</string>
    <string name="hombe_bienvenida">¡BIENVENIDO(A) A EASYFOOD!</string>
    <string name="title_activity_inicio_easy_food">InicioEasyFood</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EasyFood UNJFSC</string>
    <string name="nav_header_subtitle">easyfood@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_home">Comedor Universitario EasyFood UNJFSC</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_asistencia">Asistencia</string>
    <string name="menu_qr">QR</string>
    <string name="menu_informeasistencia">Informe de Asistencia</string>
    <string name="codigo_qr">Codigo QR</string>
    <string name="perfil_titulo">Perfil del Estudiante</string>
    <string name="menu_perfil">Perfil</string>
    <string name="reglamentointerno_titulo">Reglamento Interno</string>
    <string name="menu_reglamentointerno">Reglamento Interno</string>
    <string name="cerrarsesion_titulo">Cerrar Sesión</string>
    <string name="menu_cerrarsesion">Cerrar Sesión</string>
    <string name="nombres_apellidos">NICHO VIRU WIGBERTO MARTIN</string>
    <string name="codigouni_usuario">0333161000</string>
    <string name="dni_usuario">52635263</string>
    <string name="email_usuario">wmnichov@hotmail.com</string>
    <string name="telefono_usuario">2363656</string>
    <string name="celular_usuario">966584578</string>
    <string name="estado_usuario">LIBRE</string>
    <string name="boton_editarperfil">Editar</string>
    <string name="editarperfil_titulo">Editar Perfil del Estudiante</string>
    <string name="boton_guardar">Guardar Datos</string>
    <string name="datos_completos">USTED HA ACTUALIZADO CON EXITO SUS DATOS</string>
    <string name="confirmacion_asistencia">USTED HA REGISTRADO CON ÉXITO SU ASISTENCIA</string>


    <string name="title_activity_home_easy_food">HomeEasyFood</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
