<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/inicio_side_bar_easyfood"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/menu"
            android:icon="@drawable/menu_side_bar_easyfood"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/informedeasistencia"
            android:icon="@drawable/asistencia_side_bar_easyfood"
            android:title="@string/menu_informeasistencia" />
        <item
            android:id="@+id/codigoqr"
            android:icon="@drawable/codigoqr_side_bar_easyfood"
            android:title="@string/menu_qr"/>
        <item
            android:id="@+id/perfil"
            android:icon="@drawable/perfil_side_bar_easyfood"
            android:title="@string/menu_perfil" />
    </group>

    <item android:title="Comedor Universitario">
        <menu>
            <item
                android:id="@+id/reglamentointerno"
                android:icon="@drawable/reglamento_side_bar_easyfood"
                android:title="@string/menu_reglamentointerno" />
            <item
                android:id="@+id/cerrarsesion"
                android:icon="@drawable/cerrarsesion_side_bar_easyfood"
                android:title="@string/menu_cerrarsesion"/>

        </menu>
    </item>
</menu>