<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.proyecto.easyfood.ui.inicio.InicioEasyFoodActivity"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" >
        <action
            android:id="@+id/action_nav_home_to_nav_menu"
            app:destination="@id/nav_menu" />
        <action
            android:id="@+id/action_nav_home_to_nav_asistencia"
            app:destination="@id/nav_asistencia" />
        <action
            android:id="@+id/action_nav_home_to_nav_qr"
            app:destination="@id/nav_qr" />
        <action
            android:id="@+id/action_nav_home_to_nav_informeasistencia"
            app:destination="@id/nav_informeasistencia" />
    </fragment>

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.proyecto.easyfood.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_asistencia"
        android:name="com.proyecto.easyfood.ui.asistencia.AsistenciaFragment"
        android:label="@string/menu_asistencia"
        tools:layout="@layout/fragment_asistencia" />

    <fragment
        android:id="@+id/nav_qr"
        android:name="com.proyecto.easyfood.ui.qr.QRFragment"
        android:label="@string/menu_qr"
        tools:layout="@layout/fragment_qr" />

    <fragment
        android:id="@+id/nav_informeasistencia"
        android:name="com.proyecto.easyfood.ui.informedeasistencia.InformeAsistenciaFragment"
        android:label="@string/menu_informeasistencia"
        tools:layout="@layout/fragment_informeasistencia" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.proyecto.easyfood.ui.perfil.PerfilEasyFoodActivity"
        android:label="@string/perfil_titulo"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_nav_editarperfil"
            app:destination="@id/nav_editarperfil" />
    </fragment>

    <fragment
        android:id="@+id/nav_editarperfil"
        android:name="com.proyecto.easyfood.ui.editarperfil.EditarPerfilEasyFoodActivity"
        android:label="@string/editarperfil_titulo"
        tools:layout="@layout/fragment_editarperfil" >
        <action
            android:id="@+id/action_nav_editarperfil_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_reglamentointerno"
        android:name="com.proyecto.easyfood.ui.reglamentointerno.ReglamentoInternoFragment"
        android:label="@string/menu_reglamentointerno"
        tools:layout="@layout/fragment_reglamentointerno" />

    <fragment
        android:id="@+id/nav_cerrarsesion"
        android:name="com.proyecto.easyfood.ui.cerrarsesion.CerrarSesionFragment"
        android:label="@string/menu_cerrarsesion"
        tools:layout="@layout/fragment_cerrarsesion" />
</navigation>