<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorBotones"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtApellidosNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="20dp"
            android:text="@string/nombres_apellidos"
            android:textAlignment="center"
            android:textColor="@color/colorPalabras"
            android:textSize="35sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ScrollView
        android:layout_width="416dp"
        android:layout_height="582dp"
        android:layout_marginTop="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.713">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="401dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="29dp"
                    android:layout_height="wrap_content"
                    android:gravity="fill_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgvwCodigoUniversitario"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/txtCodigouni"
                        app:layout_constraintHorizontal_bias="0.77"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                        app:layout_constraintVertical_bias="0.035"
                        app:srcCompat="@drawable/codigouni_usuario" />

                    <ImageView
                        android:id="@+id/imgvwDniUniversitario"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="22dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/txtDni"
                        app:layout_constraintHorizontal_bias="0.77"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgvwCodigoUniversitario"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/dni_usuario" />

                    <ImageView
                        android:id="@+id/imgEstado"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="22dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/txtEstado"
                        app:layout_constraintHorizontal_bias="0.77"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgvwDniUniversitario"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/estado_usuario" />

                    <ImageView
                        android:id="@+id/imgvwEmail"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="22dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/etxtEmail"
                        app:layout_constraintHorizontal_bias="0.77"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgEstado"
                        app:layout_constraintVertical_bias="0.025"
                        app:srcCompat="@drawable/email_usuario" />

                    <ImageView
                        android:id="@+id/imgvwTelefono"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="22dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/etxtTelefono"
                        app:layout_constraintHorizontal_bias="0.77"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgvwEmail"
                        app:layout_constraintVertical_bias="0.0"

                        app:srcCompat="@drawable/telefono_usuario" />

                    <ImageView
                        android:id="@+id/imgvwCelular"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="22dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/etxtCelular"
                        app:layout_constraintHorizontal_bias="0.77"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgvwTelefono"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/celular_usuario" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="267dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtCodigouni"
                        android:layout_width="202dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/codigouni_usuario"
                        android:textColor="@color/colorPrimario"
                        android:textSize="35sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.595"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                    <TextView
                        android:id="@+id/txtDni"
                        android:layout_width="202dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/dni_usuario"
                        android:textColor="@color/colorPrimario"
                        android:textSize="35sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.595"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtCodigouni"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/txtEstado"
                        android:layout_width="202dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/estado_usuario"
                        android:textColor="@color/colorPrimario"
                        android:textSize="35sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.595"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtDni"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/etxtEmail"
                        android:layout_width="240dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center_vertical"
                        android:inputType="textEmailAddress"
                        android:text="@string/email_usuario"
                        android:textColor="@color/colorPrimario"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.668"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtEstado"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/etxtTelefono"
                        android:layout_width="240dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:maxLength="7"
                        android:text="@string/telefono_usuario"
                        android:textColor="@color/colorPrimario"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.668"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etxtEmail"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/etxtCelular"
                        android:layout_width="240dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:maxLength="9"
                        android:text="@string/celular_usuario"
                        android:textColor="@color/colorPrimario"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.668"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etxtTelefono"
                        app:layout_constraintVertical_bias="0.0" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnGuardarDatos"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/boton_redondo"
                    android:gravity="center"
                    android:text="@string/boton_guardar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPalabras"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etxtCelular"
                    app:layout_constraintVertical_bias="0.0" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>